make a note folder & move file

--- a/note/assignment day3.html
+++ b/note/assignment day3.html
@@ -84,6 +84,6 @@ HTML <input> 요소는 웹 기반 양식에서 사용자의 데이터를 받을 
       </div>
     </form>
   </main>
-  <footer>&copy : 2020. Simon<img src="img/icon.png" /></footer>
+  <footer>&copy : 2020. Simon<img src="../img/icon.png" /></footer>
 </body>
 </html>
