--- a/note/transitions.html
+++ b/note/transitions.html
@@ -81,7 +81,7 @@
   </head>
   <body>
     <a href="#">Go Home</a>
-    <img src="img/icon.png" />
+    <img src="../img/icon.png" />
     <span>sdfafasdfasfafadfasf</span>
     <div id="flipIcon">
       <h2>56</h2>
