--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Kokoa Talk</title>
+<!-- BEM(Block Element Modifier)
+BEM은 CSS Architecture의 하나이다
+block__element--modifier
+block--modifier
+모두 class로 지정하여 편리하게 사용 : 
+.block__element--modifier #block__element--modifier 쓸지 고민하지 않고 바로 
+.block__element--modifier로 쓰면 된다 -->
 </head>
 <body>
- <div id="status-bar">
+ <div class="status-bar">
      <div class="status-bar__row">
          <span>No Service</span>
          <!-- wi-fi icon -->
