--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@ block--modifier
  <div class="status-bar">
      <div class="status-bar__row">
          <span>No Service</span>
-         <!-- wi-fi icon -->
+         <i class="fas fa-wifi"></i>
      </div>
      <div class="status-bar__row">
         <span>18:45</span>
      </div>
      <div class="status-bar__row">
-        <!-- lock icon -->
+        <i class="fas fa-lock"></i>
         <span>100%</span>
-        <!-- battery icon -->
-        <!-- lightning icon -->
+        <i class="fas fa-battery-full"></i>
+        <i class="fas fa-bolt"></i>
      </div>
  </div>  
+ <script
+ src="https://kit.fontawesome.com/6478f529f2.js"
+ crossorigin="anonymous"
+></script>
 </body>
 </html>
 </html>
