--- a/index.html
+++ b/index.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kokoa Talk</title>
-<!-- BEM(Block Element Modifier)
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome to Cage Talk</title>
+    <!-- BEM(Block Element Modifier)
 BEM은 CSS Architecture의 하나이다
 block__element--modifier
 block--modifier
 모두 class로 지정하여 편리하게 사용 : 
 .block__element--modifier #block__element--modifier 쓸지 고민하지 않고 바로 
 .block__element--modifier로 쓰면 된다 -->
-</head>
-<body>
- <div class="status-bar">
-     <div class="status-bar__row">
-         <span>No Service</span>
-         <i class="fas fa-wifi"></i>
-     </div>
-     <div class="status-bar__row">
+  </head>
+
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__row">
+        <span>No Service</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__row">
         <span>18:45</span>
-     </div>
-     <div class="status-bar__row">
+      </div>
+      <div class="status-bar__row">
         <i class="fas fa-lock"></i>
         <span>100%</span>
         <i class="fas fa-battery-full"></i>
         <i class="fas fa-bolt"></i>
-     </div>
- </div>  
- <script
- src="https://kit.fontawesome.com/6478f529f2.js"
- crossorigin="anonymous"
-></script>
-</body>
-</html>
+      </div>
+    </div>
+
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to CageTalk</h1>
+      <p class="welcome-header__text">
+        If you have a Cage Account, log in with your email or phone number.
+      </p>
+    </header>
+
+    <form class="login-form">
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="=Log In" />
+      <a href="#">Find Cage Account or Password</a>
+    </form>
+
+    <script
+      src="https://kit.fontawesome.com/6478f529f2.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
