--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ block--modifier
 모두 class로 지정하여 편리하게 사용 : 
 .block__element--modifier #block__element--modifier 쓸지 고민하지 않고 바로 
 .block__element--modifier로 쓰면 된다 -->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
@@ -25,7 +26,7 @@ block--modifier
       <div class="status-bar__row">
         <i class="fas fa-lock"></i>
         <span>100%</span>
-        <i class="fas fa-battery-full"></i>
+        <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
     </div>
