--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ block--modifier
     <form class="login-form">
       <input type="text" placeholder="Email or phone number" />
       <input type="password" placeholder="Password" />
-      <input type="submit" value="=Log In" />
+      <input type="submit" value="Log In" />
       <a href="#">Find Cage Account or Password</a>
     </form>
 
