--- a/note/css.html
+++ b/note/css.html
@@ -35,6 +35,10 @@
             적용은 직전 DIRECT 부모 엘리먼트에서 명령해야 자식 속성으로 인정이 된다
             즉 부모 엘리먼트를 flex containner로 지정해야함 아주 중요함!!!!
             display: flex;
+            
+            flex-wrap: wrap;
+            항목이 여러 행에 나열되도록 하려면 flex-wrap 속성의 값을 wrap으로 지정합니다. 그러면 항목이 하나의 행에 들어가지 않을 정도로 클 경우 다른 행에 배치됩니다. 
+            
             flex main axis는 X축임 당연히 cross는 Y축임
             만약에 flex 방향을 바꾸면 축 방향도 반대로 바뀐다
             flex-direction: column; (row가 기본값이다)
