--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ block--modifier
         If you have a Cage Account, log in with your email or phone number.
       </p>
     </header>
-
-    <form class="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <!-- form에 action과 method추가 각각 이름도 설정 get은 post에 비해 보안에 취약하지만 url을 쉽게 알아보기 위해 설정했다 -->
+    <form action="friends.html" method="get" class="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
       <a href="#">Find Cage Account or Password</a>
     </form>
