--- a/friends.html
+++ b/friends.html
@@ -6,6 +6,7 @@
     <title>Welcome to Cage Talk</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
+
   <body>
     <div class="status-bar">
       <div class="status-bar__row">
@@ -27,18 +28,18 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav_link" href="friends.html"
-            ><i class="fas fa-user fa-lg"></i
+            ><i class="fas fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav_link" href=""><i class="fas fa-comment fa-lg"></i></a>
+          <a class="nav_link" href=""><i class="fas fa-comment fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav_link" href=""><i class="fas fa-search fa-lg"></i></a>
+          <a class="nav_link" href=""><i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
           <a class="nav_link" href=""
-            ><i class="fas fa-ellipsis-h fa-lg"></i
+            ><i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
       </ul>
