--- a/friends.html
+++ b/friends.html
@@ -35,7 +35,19 @@
       <i class="fas fa-info-circle"></i> Friends' Names Display
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
-
+    <div class="user-component">
+      <div class="user-component__column">
+        <img
+          src="https://avatars2.githubusercontent.com/u/68684223?s=460&u=10119e46dd856248c515471aab3780c2c0660f1d&v=4"
+          class="user-component__avatar"
+        />
+        <div class="user-component__text">
+          <h3 class="user-component__title">Cage</h3>
+          <h6 class="user-component__subtitle">this text whatever</h6>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
