--- a/friends.html
+++ b/friends.html
@@ -35,19 +35,44 @@
       <i class="fas fa-info-circle"></i> Friends' Names Display
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
-    <div class="user-component">
-      <div class="user-component__column">
-        <img
-          src="https://avatars2.githubusercontent.com/u/68684223?s=460&u=10119e46dd856248c515471aab3780c2c0660f1d&v=4"
-          class="user-component__avatar"
-        />
-        <div class="user-component__text">
-          <h3 class="user-component__title">Cage</h3>
-          <h6 class="user-component__subtitle">this text whatever</h6>
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://avatars2.githubusercontent.com/u/68684223?s=460&u=10119e46dd856248c515471aab3780c2c0660f1d&v=4"
+            class="user-component__avatar"
+          />
+          <div class="user-component__text">
+            <h3 class="user-component__title">Cage</h3>
+            <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://avatars2.githubusercontent.com/u/68684223?s=460&u=10119e46dd856248c515471aab3780c2c0660f1d&v=4"
+              class="user-component__avatar"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Channel</h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
         </div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
