--- a/find.html
+++ b/find.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats-Cage Talk</title>
+    <title>Find-Cage Talk</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
@@ -24,35 +24,14 @@
       </div>
     </div>
     <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
+      <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
       </div>
     </header>
 
-    <main class="friends-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://avatars2.githubusercontent.com/u/68684223?s=460&u=10119e46dd856248c515471aab3780c2c0660f1d&v=4"
-            class="user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h3 class="user-component__title">Cage</h3>
-            <h6 class="user-component__subtitle">
-              Please check My Cage Account Info
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-    </main>
+    <main class="main-screen"></main>
 
     <nav class="nav">
       <ul class="nav__list">
@@ -64,7 +43,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">99</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
