--- a/chats.html
+++ b/chats.html
@@ -34,24 +34,26 @@
     </header>
 
     <main class="friends-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://avatars2.githubusercontent.com/u/68684223?s=460&u=10119e46dd856248c515471aab3780c2c0660f1d&v=4"
-            class="user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h3 class="user-component__title">Cage</h3>
-            <h6 class="user-component__subtitle">
-              Please check My Cage Account Info
-            </h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://avatars2.githubusercontent.com/u/68684223?s=460&u=10119e46dd856248c515471aab3780c2c0660f1d&v=4"
+              class="user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h3 class="user-component__title">Cage</h3>
+              <h6 class="user-component__subtitle">
+                Please check My Cage Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
