--- a/settings.html
+++ b/settings.html
@@ -26,7 +26,9 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <i class="fas fa-angle-left fa-3x"></i>
+        <a href="more.html">
+          <i class="fas fa-angle-left fa-3x"></i>
+        </a>
       </div>
       <div class="alt-header__column">
         <h1 class="alt-header__title">Settings</h1>
@@ -39,16 +41,25 @@
     <main class="main-screen">
       <ul class="settings-list">
         <li class="settings__setting">
-          <i class="fas fa-bullhorn"></i>
-          <span>Notices</span>
+          <div class="settings__setting-column">
+            <i class="fas fa-bullhorn"></i>
+            <span>Notices</span>
+          </div>
+          <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
-          <i class="fas fa-flask"></i>
-          <span>Kokoa Lab</span>
+          <div class="settings__setting-column">
+            <i class="fas fa-flask"></i>
+            <span>Cage Lab</span>
+          </div>
+          <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
-          <i class="fas fa-info-circle"></i>
-          <span>Version</span>
+          <div class="settings__setting-column">
+            <i class="fas fa-info-circle"></i>
+            <span>Version</span>
+          </div>
+          <div class="settings__setting-column">Latest Version</div>
         </li>
       </ul>
     </main>
