--- a/chat.html
+++ b/chat.html
@@ -42,6 +42,19 @@
       <div class="chat__timestamp">
         Tuesday, June 30, 2020
       </div>
+
+      <div class="message-row">
+        <img
+          src="https://avatars2.githubusercontent.com/u/68684223?s=460&u=10119e46dd856248c515471aab3780c2c0660f1d&v=4"
+        />
+        <div class="message-row__content">
+          <span class="message__author">Cage</span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script
