트랜지션 애니메이션부분 추가

--- a/note/transitions.html
+++ b/note/transitions.html
@@ -38,6 +38,17 @@
           transform: rotateX(0);
         }
       }
+
+      /* animation: testAnimation 2s ease-in-out .5s infinite alternate paused
+        animation-name: testAnimation;
+        animation-duration: 2s;
+        animation-timing-function: ease-in-out;
+        animation-delay: 0.5s;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+        animation-play-state: paused;
+      */
+
       a {
         color: white;
         background-color: tomato;
