--- a/more.html
+++ b/more.html
@@ -31,6 +31,9 @@
         <span>
           <a href="settings.html"><i class="fas fa-cog fa-lg"></i> </a>
         </span>
+        <a href="index.html">
+          <span><i class="fas fa-sign-out-alt fa-lg"></i></span>
+        </a>
       </div>
     </header>
 
@@ -112,10 +115,6 @@
         </li>
       </ul>
     </nav>
-
-    <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
-    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
