--- a/chats.html
+++ b/chats.html
@@ -30,6 +30,9 @@
         <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
+        <a href="index.html">
+          <span><i class="fas fa-sign-out-alt fa-lg"></i></span>
+        </a>
       </div>
     </header>
 
