--- a/find.html
+++ b/find.html
@@ -28,6 +28,9 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
+        <a href="index.html">
+          <span><i class="fas fa-sign-out-alt fa-lg"></i></span>
+        </a>
       </div>
     </header>
 
