--- a/friends.html
+++ b/friends.html
@@ -29,6 +29,9 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
+        <a href="index.html">
+          <span><i class="fas fa-sign-out-alt fa-lg"></i></span>
+        </a>
       </div>
     </header>
     <a id="friends-display-link">
