--- a/note/day10/index.html
+++ b/note/day10/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Day 10</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -31,6 +39,212 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <div class="today">
+        <div class="today__row">
+          <h1>
+            오늘의 책
+          </h1>
+        </div>
+        <div class="today__row">
+          <div class="today__column">
+            <img
+              src="http://image.kyobobook.co.kr/images/book/xlarge/080/x9791196831080.jpg"
+            />
+          </div>
+          <div class="today__column book-right">
+            <div class="today__info-row book-info">
+              <div class="today__info-row__title"><h2>부의 대 이동</h2></div>
+              <div class="today__info-row__author"><h4>오건영</h4></div>
+              <div class="today__info-row__fav">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+            </div>
+            <div class="today__row book-section">
+              <span>경제/경영</span>
+              <span>제테크/금융</span>
+              <span>자산관리</span>
+            </div>
+            <div class="today__row book-bookmark">
+              <div><i class="fas fa-bookmark"></i></div>
+              <div>지금 예약</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bestseller">
+        <div class="bestseller__row"><h1>잘나가는 책</h1></div>
+        <div class="bestseller__row">
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/095/l9791197023095.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/796/l9791188331796.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/080/l9791196831080.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/600/l9788901244600.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/665/l9788901243665.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/720/l9791187481720.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/175/l9791190382175.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/592/l9791164135592.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/402/l9788997780402.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+          <div class="bestseller__column">
+            <div class="bestseller__info-img">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/144/l9791165210144.jpg"
+              />
+            </div>
+            <div class="bestseller__info-fav">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pop-author">
+        <div class="pop__row"><h1>인기있는 작가</h1></div>
+        <div class="pop__info">
+          <div class="pop__img">
+            <img
+              src="http://bc.kyobobook.co.kr/crosseditor/binary/images/001009/20200610161434887_EPGZ7HGF.jpg"
+            />
+          </div>
+          <div class="pop__desc">
+            <div class="pop__desc-name"><h2>조주희</h2></div>
+            <div class="pop__desc-name"><h3>ABC 뉴스 한국 지국장</h3></div>
+            <div class="pop__desc-desc">
+              <h4>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Asperiores nisi officiis, quasi voluptate quae similique vitae
+                quo dicta repellendus. Harum doloribus cumque expedita soluta
+                reprehenderit eveniet minus velit. Natus, eligendi.
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
