media-screen 추가

--- a/note/day10/index.html
+++ b/note/day10/index.html
@@ -245,7 +245,14 @@
         </div>
       </div>
     </main>
-
+    <div id="check-size__big">
+      <div><h1>브라우저 화면이 너무 커요! 크기를 줄여주세요.</h1></div>
+      <div><h2>Browser screen is too BIG! Please reduce the size.</h2></div>
+    </div>
+    <div id="check-size__small">
+      <div><h3>브라우저 화면이 너무 작아요! 크기를 키워주세요.</h3></div>
+      <div><h4>Browser screen is too SMALL! Please increase the size.</h4></div>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
