별점, 스크린 크기 조절 모바일 환경 조절

--- a/note/day10/index.html
+++ b/note/day10/index.html
@@ -54,23 +54,21 @@
             />
           </div>
           <div class="today__column book-right">
-            <div class="today__info-row book-info">
+            <div class="book-info">
               <div class="today__info-row__title"><h2>부의 대 이동</h2></div>
               <div class="today__info-row__author"><h4>오건영</h4></div>
               <div class="today__info-row__fav">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+                <div class="star-rating">
+                  <span style="width: 50%;"></span>
+                </div>
               </div>
             </div>
-            <div class="today__row book-section">
+            <div class="book-section">
               <span>경제/경영</span>
               <span>제테크/금융</span>
               <span>자산관리</span>
             </div>
-            <div class="today__row book-bookmark">
+            <div class="book-bookmark">
               <div><i class="fas fa-bookmark"></i></div>
               <div>지금 예약</div>
             </div>
@@ -87,11 +85,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 75%;"></span>
+              </div>
             </div>
           </div>
           <div class="bestseller__column">
@@ -101,11 +97,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 30%;"></span>
+              </div>
             </div>
           </div>
           <div class="bestseller__column">
@@ -115,11 +109,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 80%;"></span>
+              </div>
             </div>
           </div>
           <div class="bestseller__column">
@@ -129,11 +121,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 70%;"></span>
+              </div>
             </div>
           </div>
           <div class="bestseller__column">
@@ -143,11 +133,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 65%;"></span>
+              </div>
             </div>
           </div>
           <div class="bestseller__column">
@@ -157,11 +145,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 60%;"></span>
+              </div>
             </div>
           </div>
           <div class="bestseller__column">
@@ -171,11 +157,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 55%;"></span>
+              </div>
             </div>
           </div>
           <div class="bestseller__column">
@@ -185,11 +169,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 50%;"></span>
+              </div>
             </div>
           </div>
           <div class="bestseller__column">
@@ -199,11 +181,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 45%;"></span>
+              </div>
             </div>
           </div>
           <div class="bestseller__column">
@@ -213,11 +193,9 @@
               />
             </div>
             <div class="bestseller__info-fav">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <div class="star-rating">
+                <span style="width: 40%;"></span>
+              </div>
             </div>
           </div>
         </div>
