--- a/friends.html
+++ b/friends.html
@@ -17,7 +17,6 @@
         <span class="txt_lg" id="hours"></span>
         <span class="mark">:</span>
         <span class="txt_lg" id="min"></span>
-        <span class="mark02">'</span>
         <span class="txt_sm" id="sec"></span>
       </div>
       <div class="status-bar__row">
@@ -67,13 +66,13 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://avatars2.githubusercontent.com/u/68684223?s=460&u=10119e46dd856248c515471aab3780c2c0660f1d&v=4"
+              src="https://live.staticflickr.com/4430/36479331383_090bb85017_b.jpg"
               class="user-component__avatar"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                Channel
+                IU
               </h4>
             </div>
           </div>
@@ -84,6 +83,123 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="friends-screen__list">
+        <div class="friends-screen__list-header">
+          <span>Friends 5</span>
+        </div>
+        <a href="#">
+          <div class="user-component main-friends-row">
+            <div class="user-component__column">
+              <img
+                src="https://live.staticflickr.com/4430/36479331383_090bb85017_b.jpg"
+                class="user-component__avatar"
+                class="user-component__avatar user-component__avatar--sm"
+              />
+              <div class="user-component__text">
+                <div class="user-component__text__row">
+                  <h4
+                    class="user-component__title user-component__title--not-bold"
+                  >
+                    IU
+                  </h4>
+                </div>
+                <div class="user-component__text__row">
+                  eight(Prod.&Feat. SUGA of BTS)
+                </div>
+              </div>
+            </div>
+            <div class="user-component__column">
+              <!-- <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div> -->
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="user-component main-friends-row">
+            <div class="user-component__column">
+              <img
+                src="https://yt3.ggpht.com/a/AATXAJwgwcqoiYKn7umZJ1KFC1M2tCjqc_Di3i0d3Ooj7Q=s176-c-k-c0xffffffff-no-nd-rj"
+                class="user-component__avatar"
+                class="user-component__avatar user-component__avatar--sm"
+              />
+              <div class="user-component__text">
+                <div class="user-component__text__row">
+                  <h4
+                    class="user-component__title user-component__title--not-bold"
+                  >
+                    BLACKPINK
+                  </h4>
+                </div>
+                <div class="user-component__text__row">
+                  How You Like That
+                </div>
+              </div>
+            </div>
+            <div class="user-component__column">
+              <!-- <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div> -->
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="user-component main-friends-row">
+            <div class="user-component__column">
+              <img
+                src="https://yt3.ggpht.com/a/AATXAJxXBJZJAcY44wNUOR0PjY61UhVOWKZtbr9aSmeNOA=s176-c-k-c0xffffffff-no-nd-rj"
+                class="user-component__avatar"
+                class="user-component__avatar user-component__avatar--sm"
+              />
+              <div class="user-component__text">
+                <div class="user-component__text__row">
+                  <h4
+                    class="user-component__title user-component__title--not-bold"
+                  >
+                    Jessi
+                  </h4>
+                </div>
+                <div class="user-component__text__row">NUNU NANA</div>
+              </div>
+            </div>
+            <div class="user-component__column">
+              <!-- <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div> -->
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="user-component main-friends-row">
+            <div class="user-component__column">
+              <img
+                src="https://yt3.ggpht.com/a/AATXAJwOkG-H5Ic2dYRGeCQW4T4tZ-2wjcYoexQs0YH5Zg=s176-c-k-c0xffffffff-no-nd-rj"
+                class="user-component__avatar"
+                class="user-component__avatar user-component__avatar--sm"
+              />
+              <div class="user-component__text">
+                <div class="user-component__text__row">
+                  <h4
+                    class="user-component__title user-component__title--not-bold"
+                  >
+                    Apink
+                  </h4>
+                </div>
+                <div class="user-component__text__row">AWay</div>
+              </div>
+            </div>
+            <div class="user-component__column">
+              <!-- <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div> -->
+            </div>
+          </div>
+        </a>
       </div>
     </main>
 
@@ -102,7 +218,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html">
-            <i class="fas fa-search fa-2x"></i>
+            <i class="fas fa-hashtag fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
