--- a/find.html
+++ b/find.html
@@ -17,7 +17,6 @@
         <span class="txt_lg" id="hours"></span>
         <span class="mark">:</span>
         <span class="txt_lg" id="min"></span>
-        <span class="mark02">'</span>
         <span class="txt_sm" id="sec"></span>
       </div>
       <div class="status-bar__row">
@@ -113,7 +112,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html">
-            <i class="fas fa-search fa-2x"></i>
+            <i class="fas fa-hashtag fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
