--- a/more.html
+++ b/more.html
@@ -122,6 +122,11 @@
       </ul>
     </nav>
 
+    <div id="check-size__big">
+      <div><h1>브라우저 화면이 너무 커요! 크기를 줄여주세요.</h1></div>
+      <div><h2>Browser screen is too BIG! Please reduce the size.</h2></div>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
