--- a/signup.html
+++ b/signup.html
@@ -63,8 +63,9 @@ block--modifier
       <a href="#">Log in to Caum</a>
     </form>
 
-    <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+    <div id="check-size__big">
+      <div><h1>브라우저 화면이 너무 커요! 크기를 줄여주세요.</h1></div>
+      <div><h2>Browser screen is too BIG! Please reduce the size.</h2></div>
     </div>
 
     <script
