--- a/find.html
+++ b/find.html
@@ -8,37 +8,41 @@
   </head>
 
   <body>
-    <div class="status-bar">
-      <div class="status-bar__row">
-        <span>SKT</span>
-        <i class="fas fa-signal"></i>
+    <div class="fixed-header">
+      <div class="status-bar">
+        <div class="status-bar__row">
+          <span>SKT</span>
+          <i class="fas fa-signal"></i>
+        </div>
+        <div class="status-bar__row time_box">
+          <span class="txt_lg" id="hours"></span>
+          <span class="mark">:</span>
+          <span class="txt_lg" id="min"></span>
+          <span class="txt_sm" id="sec"></span>
+        </div>
+        <div class="status-bar__row">
+          <img
+            src="https://img.icons8.com/material-sharp/20/000000/lock-orientation.png"
+          />
+          <img src="https://img.icons8.com/ios-filled/20/000000/wifi.png" />
+          <span>100%</span>
+          <i class="fas fa-battery-full fa-lg"></i>
+          <i class="fas fa-bolt"></i>
+        </div>
       </div>
-      <div class="status-bar__row time_box">
-        <span class="txt_lg" id="hours"></span>
-        <span class="mark">:</span>
-        <span class="txt_lg" id="min"></span>
-        <span class="txt_sm" id="sec"></span>
-      </div>
-      <div class="status-bar__row">
-        <img
-          src="https://img.icons8.com/material-sharp/20/000000/lock-orientation.png"
-        />
-        <img src="https://img.icons8.com/ios-filled/20/000000/wifi.png" />
-        <span>100%</span>
-        <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-bolt"></i>
-      </div>
+      <header class="screen-header">
+        <h1 class="screen-header__title">Find</h1>
+        <div class="screen-header__icons">
+          <span><i class="fas fa-search fa-lg"></i></span>
+          <span>
+            <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
+          </span>
+          <a href="index.html">
+            <span><i class="fas fa-sign-out-alt fa-lg"></i></span>
+          </a>
+        </div>
+      </header>
     </div>
-    <header class="screen-header">
-      <h1 class="screen-header__title">Find</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
-        <a href="index.html">
-          <span><i class="fas fa-sign-out-alt fa-lg"></i></span>
-        </a>
-      </div>
-    </header>
 
     <main class="main-screen">
       <div class="icon-row">
@@ -101,7 +105,7 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html">
-            <i class="far fa-user fa-2x"></i>
+            <i class="fas fa-user fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
@@ -117,6 +121,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
+            <span class="nav__notification-more more"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i>
           </a>
         </li>
