--- a/index.html
+++ b/index.html
@@ -15,28 +15,30 @@ block--modifier
   </head>
 
   <body>
-    <div class="status-bar">
-      <div class="status-bar__row">
-        <span>SKT</span>
-        <i class="fas fa-signal"></i>
+    <div class="fixed-header">
+      <div class="status-bar">
+        <div class="status-bar__row">
+          <span>SKT</span>
+          <i class="fas fa-signal"></i>
+        </div>
+        <div class="status-bar__row time_box">
+          <span class="txt_lg" id="hours"></span>
+          <span class="mark">:</span>
+          <span class="txt_lg" id="min"></span>
+          <span class="txt_sm" id="sec"></span>
+        </div>
+        <div class="status-bar__row">
+          <img
+            src="https://img.icons8.com/material-sharp/20/000000/lock-orientation.png"
+          />
+          <img src="https://img.icons8.com/ios-filled/20/000000/wifi.png" />
+          <span>100%</span>
+          <i class="fas fa-battery-full fa-lg"></i>
+          <i class="fas fa-bolt"></i>
+        </div>
       </div>
-      <div class="status-bar__row time_box">
-        <span class="txt_lg" id="hours"></span>
-        <span class="mark">:</span>
-        <span class="txt_lg" id="min"></span>
-        <span class="txt_sm" id="sec"></span>
-      </div>
-      <div class="status-bar__row">
-        <img
-          src="https://img.icons8.com/material-sharp/20/000000/lock-orientation.png"
-        />
-        <img src="https://img.icons8.com/ios-filled/20/000000/wifi.png" />
-        <span>100%</span>
-        <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-bolt"></i>
-      </div>
+      <div class="screen-header"></div>
     </div>
-
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to CageTalk</h1>
       <p class="welcome-header__text">
