--- a/settings.html
+++ b/settings.html
@@ -8,42 +8,43 @@
   </head>
 
   <body>
-    <div class="status-bar">
-      <div class="status-bar__row">
-        <span>SKT</span>
-        <i class="fas fa-signal"></i>
+    <div class="fixed-header">
+      <div class="status-bar">
+        <div class="status-bar__row">
+          <span>SKT</span>
+          <i class="fas fa-signal"></i>
+        </div>
+        <div class="status-bar__row time_box">
+          <span class="txt_lg" id="hours"></span>
+          <span class="mark">:</span>
+          <span class="txt_lg" id="min"></span>
+          <span class="txt_sm" id="sec"></span>
+        </div>
+        <div class="status-bar__row">
+          <img
+            src="https://img.icons8.com/material-sharp/20/000000/lock-orientation.png"
+          />
+          <img src="https://img.icons8.com/ios-filled/20/000000/wifi.png" />
+          <span>100%</span>
+          <i class="fas fa-battery-full fa-lg"></i>
+          <i class="fas fa-bolt"></i>
+        </div>
       </div>
-      <div class="status-bar__row time_box">
-        <span class="txt_lg" id="hours"></span>
-        <span class="mark">:</span>
-        <span class="txt_lg" id="min"></span>
-        <span class="txt_sm" id="sec"></span>
-      </div>
-      <div class="status-bar__row">
-        <img
-          src="https://img.icons8.com/material-sharp/20/000000/lock-orientation.png"
-        />
-        <img src="https://img.icons8.com/ios-filled/20/000000/wifi.png" />
-        <span>100%</span>
-        <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-bolt"></i>
-      </div>
+
+      <header class="alt-header">
+        <div class="alt-header__column">
+          <a href="javascript:history.back()">
+            <i class="fas fa-angle-left fa-3x"></i>
+          </a>
+        </div>
+        <div class="alt-header__column">
+          <h1 class="alt-header__title">Settings</h1>
+        </div>
+        <div class="alt-header__column">
+          <span><i class="fas fa-search fa-lg"></i></span>
+        </div>
+      </header>
     </div>
-
-    <header class="alt-header">
-      <div class="alt-header__column">
-        <a href="more.html">
-          <i class="fas fa-angle-left fa-3x"></i>
-        </a>
-      </div>
-      <div class="alt-header__column">
-        <h1 class="alt-header__title">Settings</h1>
-      </div>
-      <div class="alt-header__column">
-        <span><i class="fas fa-search fa-lg"></i></span>
-      </div>
-    </header>
-
     <main class="main-screen">
       <ul class="settings-list">
         <li class="settings__setting">
@@ -74,7 +75,7 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html">
-            <i class="far fa-user fa-2x"></i>
+            <i class="fas fa-user fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
@@ -90,6 +91,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
+            <span class="nav__notification-more more"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i>
           </a>
         </li>
