--- a/signup.html
+++ b/signup.html
@@ -15,30 +15,32 @@ block--modifier
   </head>
 
   <body>
-    <div class="status-bar">
-      <div class="status-bar__row">
-        <span>SKT</span>
-        <i class="fas fa-signal"></i>
+    <div class="fixed-header">
+      <div class="status-bar">
+        <div class="status-bar__row">
+          <span>SKT</span>
+          <i class="fas fa-signal"></i>
+        </div>
+        <div class="status-bar__row time_box">
+          <span class="txt_lg" id="hours"></span>
+          <span class="mark">:</span>
+          <span class="txt_lg" id="min"></span>
+          <span class="txt_sm" id="sec"></span>
+        </div>
+        <div class="status-bar__row">
+          <img
+            src="https://img.icons8.com/material-sharp/20/000000/lock-orientation.png"
+          />
+          <img src="https://img.icons8.com/ios-filled/20/000000/wifi.png" />
+          <span>100%</span>
+          <i class="fas fa-battery-full fa-lg"></i>
+          <i class="fas fa-bolt"></i>
+        </div>
       </div>
-      <div class="status-bar__row time_box">
-        <span class="txt_lg" id="hours"></span>
-        <span class="mark">:</span>
-        <span class="txt_lg" id="min"></span>
-        <span class="txt_sm" id="sec"></span>
-      </div>
-      <div class="status-bar__row">
-        <img
-          src="https://img.icons8.com/material-sharp/20/000000/lock-orientation.png"
-        />
-        <img src="https://img.icons8.com/ios-filled/20/000000/wifi.png" />
-        <span>100%</span>
-        <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-bolt"></i>
-      </div>
+      <a href="javascript:history.back()">
+        <div class="back-page"><i class="fas fa-chevron-left"></i> Back</div>
+      </a>
     </div>
-    <a href="javascript:history.back()">
-      <div class="back-page"><i class="fas fa-chevron-left"></i> Back</div>
-    </a>
     <header class="signup-header">
       <h1 class="signup-header__title">Sign-up started!</h1>
       <p class="signup-header__text">
