--- a/chats.html
+++ b/chats.html
@@ -57,12 +57,12 @@
             <div class="user-component__text">
               <h3 class="user-component__title">Cage</h3>
               <h6 class="user-component__subtitle">
-                Please check My Cage Account Info
+                Hi nice to meet you! On My Way!
               </h6>
             </div>
           </div>
           <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
+            <span class="user-component__time">20:41</span>
             <div class="badge">1</div>
           </div>
         </div>
